allpage + backbutton config

--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -9,8 +9,10 @@
         android:roundIcon="@mipmap/ic_launcher_round"
         android:supportsRtl="true"
         android:theme="@style/AppTheme">
-        <activity android:name=".info"></activity>
-        <activity android:name=".availablebox"></activity>
+        <activity android:name=".ordercom"></activity>
+        <activity android:name=".order" />
+        <activity android:name=".info" />
+        <activity android:name=".availablebox" />
         <activity android:name=".storage" />
         <activity android:name=".TEST" />
         <activity android:name=".register" />
