--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -9,7 +9,9 @@
         android:roundIcon="@mipmap/ic_launcher_round"
         android:supportsRtl="true"
         android:theme="@style/AppTheme">
-        <activity android:name=".ordercom"></activity>
+        <activity android:name=".info2a"></activity>
+        <activity android:name=".availablebox2a" />
+        <activity android:name=".ordercom" />
         <activity android:name=".order" />
         <activity android:name=".info" />
         <activity android:name=".availablebox" />
